ADD_LIBRARY (lef
lefiLayer.cpp       lefiTBExt.cpp     lef.tab.cpp
FEF_malloc.cpp      lefiMacro.cpp       lefiUnits.cpp     lefwWriterCalls.cpp
FEF_stringhash.cpp  lefiMisc.cpp        lefiVia.cpp       lefwWriter.cpp
lefiArray.cpp       lefiNonDefault.cpp  lefiViaRule.cpp
lefiCrossTalk.cpp   lefiProp.cpp        lef_keywords.cpp
lefiDebug.cpp       lefiPropType.cpp    lefrReader.cpp
)
########################################################
# This library is obtained from lef_5.8
########################################################
