ADD_LIBRARY (def 
defiAlias.cpp      defiPath.cpp           defiUtil.cpp
defiAssertion.cpp  defiPinCap.cpp         defiVia.cpp
defiBlockage.cpp   defiPinProp.cpp        def_keywords.cpp
defiComponent.cpp  defiProp.cpp           defrReader.cpp
defiDebug.cpp      defiPropType.cpp       def.tab.cpp
defiFill.cpp       defiRegion.cpp         defwWriterCalls.cpp
defiFPC.cpp        defiRowTrack.cpp       defwWriter.cpp
defiGroup.cpp      defiScanchain.cpp      DFEF_malloc.cpp
defiIOTiming.cpp   defiSite.cpp           DFEF_stringhash.cpp
defiNet.cpp        defiSlot.cpp           defiMisc.cpp
defiPartition.cpp  defiTimingDisable.cpp  defiNonDefault.cpp
)
########################################################
# This library is obtained from def_5.8
########################################################
